# AgentWatch

./: .gitignore  LICENSE  README.md
backend/: migrate_schema.py
backend/app/: database.py  deps.py  main.py  models.py  schemas.py
backend/app/routes/: admin.py  projects.py  runs.py  spans.py
backend/app/services/: evaluator.py
examples/refund_agent/: demo.py
frontend/api/: client.js
frontend/components/: SpanCard.jsx
frontend/src/: App.css  App.jsx
frontend/src/pages/: RunDetailPage.jsx  RunsPage.jsx
sdk/: pyproject.toml
sdk/agentwatch/: __init__.py  auto_instrument.py  client.py  sender.py  tracing.py
