[project]
name = "agentwatch"
version = "0.1.0"
description = "Simple tracing and monitoring SDK for AI agents"
authors = [
    { name = "Anvith Vattikuti" }
]
dependencies = [
    "requests"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"